add swagGetSpsVarValueHomeBridge
