# api/swagger.yaml
@@ -71,6 +71,26 @@ paths:
           description: "Could not write variable"
       # x-swagger-router-controller: "Default"
     x-swagger-router-controller: "adsctrl"
+  /spsVarBoolHomeBridge/{spsVarName}:
+    get:
+      summary: "Read value of PLC variable {spsVarName} of type BOOL"
+      description: ""
+      operationId: "swagGetSpsVarValueHomeBridge"
+      parameters:
+      - name: "spsVarName"
+        in: "path"
+        description: "Variable name"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "Successful response"
+          schema:
+            $ref: "#/definitions/boolVal"
+        400:
+          description: "Bad request - Could not read variable"
+      # x-swagger-router-controller: "Default"
+    x-swagger-router-controller: "adsctrl"
 definitions:
   boolVal:
     type: "object"
